# zlabel

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/docs/: domain.md  git-conventions.md  workflow.md
analysis/engine_audit_2026_06/: REPORT.md  audit_table_daniocell.csv  audit_table_zscape.csv  run_audit.py
analysis/validation/: disagreement_sweep.md
analysis/zfa_usefulness/: README.md  RELATIONSHIPS.md  REPORT.md  backlog.csv  backlog.md  backlog.py  coverage.md  coverage.py  coverage_headroom.csv  coverage_headroom.md  coverage_headroom.py  coverage_unreached.csv  develops_from_experiment.md  grounding_augmentation.md  grounding_pilot.md  score_terms.py  sensitivity.csv  summary.json  zfa_edges.csv  zfa_term_usefulness.csv
benchmarks/: README.md  cell_population_coverage.yaml  daniocell_baseline_report.md  daniocell_crosswalk_overlay.yaml  daniocell_eval.csv  daniocell_tissue_crosswalk.yaml  daniocell_umap.json  zebrahub_baseline_report.md  zebrahub_eval.csv  zebrahub_tissue_crosswalk.yaml  zscape_baseline_report.md  zscape_eval.csv  zscape_tissue_crosswalk.yaml
docs/: design.md  glossary.md
docs/reference/: cell_labelling_playbook.md  cross_atlas_marker_broadening.md  human_agentic_cluster_annotation.md  panels_and_markers_reference.md  recursive_subclustering_controller.md
notebooks/build-demos/: CLAUDE.md  phase_01.ipynb  phase_02.ipynb  phase_03.ipynb  phase_04.ipynb
notebooks/learn/: 01_workflow_walkthrough.ipynb  workflow_map.md
scripts/: atlas_eval.py  audit_crosswalk.py  audit_panels.py  build_daniocell_eval.py  build_daniocell_h5ad.py  build_daniocell_umap.py  build_zebrahub_eval.py  build_zscape_eval.py  check_baseline.py  check_zscape_baseline.py  e1_specificity_sweep.py  run_zscape_eval.py  scorecard.py  setup_data.sh  significance_gate_eval.py  verify_anchors.py
scripts/hooks/: pre-commit
src/zlabel/: __init__.py  data.py  evaluate.py  genes.py  ground.py  label.py  models.py  panels.py  panels.yaml  resolve.py  significance.py
tests/: conftest.py  helpers.py  test_check_baseline.py  test_coverage.py  test_data.py  test_e1_sweep.py  test_evaluate.py  test_genes.py  test_ground.py  test_label.py  test_models.py  test_panels.py  test_resolve.py  test_significance.py  test_trace.py
tests/fixtures/: README.md  panels_test.yaml  zfa_test.obo  zfin_ensembl_test.txt  zfin_expr_test.txt  zfin_go_test.gaf
